# scylla.rs

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  architecture.dot
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: enhancement.md
.github/workflows/: test.yml
examples/: Cargo.toml  README.md  benchmark.rs  compare.rs  scylla.rs  ws_scylla.rs
scylla/: Cargo.toml
scylla-app/: Cargo.toml  README.md
scylla-app/src/: lib.rs
scylla-app/src/access/: batch.rs  delete.rs  insert.rs  keyspace.rs  mod.rs  select.rs  update.rs
scylla-app/src/application/: terminating.rs
scylla-app/src/cluster/: event_loop.rs
scylla-app/src/listener/: event_loop.rs
scylla-app/src/stage/: init.rs
scylla-app/src/stage/receiver/: init.rs
scylla-app/src/stage/reporter/: terminating.rs
scylla-app/src/stage/sender/: event_loop.rs  terminating.rs
scylla-app/src/worker/: delete.rs  mod.rs
scylla-cql/: Cargo.toml
scylla-cql/src/: lib.rs
scylla-cql/src/compression/: mod.rs
scylla-cql/src/connection/: cql.rs  mod.rs  tokens.rs
scylla-cql/src/frame/: auth_challenge.rs  auth_response.rs  auth_success.rs  authenticate.rs  batch.rs  batchflags.rs  consistency.rs  decoder.rs  encoder.rs  error.rs  execute.rs  header.rs  mod.rs  options.rs  prepare.rs  query.rs  queryflags.rs  rows.rs  startup.rs  supported.rs
scylla-cql/src/murmur3/: mod.rs  murmur3_tests.txt
scylla-cql/tests/: connection.rs
scylla-macros/: Cargo.toml
scylla-macros/src/: lib.rs  to_tokens.rs
scylla-parse/: Cargo.toml
scylla-parse-macros/: Cargo.toml
scylla-parse-macros/src/: lib.rs
scylla-parse/src/: data_types.rs  keywords.rs  lib.rs  regex.rs
scylla-parse/src/statements/: ddl.rs  dml.rs  function.rs  index.rs  mod.rs  security.rs  trigger.rs  views.rs
scylla-rs/: Cargo.toml
scylla-rs/examples/: benchmark.rs  compare.rs  scylla.rs  ws_scylla.rs
scylla-rs/src/: lib.rs
scylla-rs/src/app/: mod.rs
scylla-rs/src/app/access/: README.md  batch.rs  data_def.rs  delete.rs  execute.rs  insert.rs  keyspace.rs  mod.rs  prepare.rs  select.rs  update.rs
scylla-rs/src/app/application/: mod.rs
scylla-rs/src/app/cluster/: mod.rs
scylla-rs/src/app/node/: mod.rs
scylla-rs/src/app/ring/: README.md  mod.rs  shared.rs
scylla-rs/src/app/stage/: mod.rs
scylla-rs/src/app/stage/receiver/: mod.rs
scylla-rs/src/app/stage/reporter/: mod.rs
scylla-rs/src/app/stage/sender/: mod.rs
scylla-rs/src/app/worker/: basic.rs  batch.rs  mod.rs  prepare.rs  respond.rs  select.rs  value.rs
scylla-rs/src/cql/: mod.rs
scylla-rs/src/cql/compression/: mod.rs
scylla-rs/src/cql/connection/: cql.rs  mod.rs  tokens.rs
scylla-rs/src/cql/frame/: auth_challenge.rs  auth_response.rs  auth_success.rs  authenticate.rs  batch.rs  bind.rs  consistency.rs  decoder.rs  encoder.rs  header.rs  mod.rs  opcode.rs  options.rs  prepare.rs  query.rs  queryflags.rs  ready.rs  result.rs  rows.rs  startup.rs  supported.rs
scylla-rs/src/cql/frame/requests/: auth_response.rs  batch.rs  batch_flags.rs  execute.rs  mod.rs  options.rs  prepare.rs  query.rs  query_flags.rs  register.rs  startup.rs
scylla-rs/src/cql/frame/responses/: auth_challenge.rs  (+8 more)
scylla-rs/src/cql/murmur3/: mod.rs
scylla-rs/src/cql/tests/: connection.rs  mod.rs
scylla-rs/src/parser/: data_types.rs  keywords.rs  mod.rs  regex.rs
scylla-rs/src/parser/statements/: ddl.rs  dml.rs  function.rs  index.rs  mod.rs  security.rs  trigger.rs  views.rs
scylla/examples/: Cargo.toml  README.md  scylla.rs
scylla/src/: lib.rs
scylla/src/access/: batch.rs  delete.rs  insert.rs  keyspace.rs  mod.rs  select.rs  update.rs
scylla/src/application/: README.md  event_loop.rs  init.rs  mod.rs  starter.rs  terminating.rs
scylla/src/cluster/: README.md  event_loop.rs  init.rs  mod.rs  terminating.rs
scylla/src/listener/: event_loop.rs  init.rs  mod.rs  terminating.rs
scylla/src/node/: event_loop.rs  init.rs  mod.rs  terminating.rs
scylla/src/ring/: README.md  mod.rs
scylla/src/stage/: event_loop.rs  init.rs  mod.rs  terminating.rs
scylla/src/stage/receiver/: README.md  event_loop.rs  init.rs  mod.rs  terminating.rs
scylla/src/stage/reporter/: event_loop.rs  init.rs  mod.rs  terminating.rs
scylla/src/stage/sender/: README.md  event_loop.rs  init.rs  mod.rs  terminating.rs
scylla/src/websocket/: event_loop.rs  init.rs  mod.rs  terminating.rs
scylla/src/websocket/client/: add_nodes.rs
scylla/src/worker/: delete.rs  insert.rs  mod.rs  prepare.rs  select.rs  value.rs
src/: lib.rs
src/app/: mod.rs
src/app/access/: batch.rs  delete.rs  execute.rs  insert.rs  keyspace.rs  mod.rs  prepare.rs  select.rs  update.rs
src/app/application/: event_loop.rs  init.rs  mod.rs  run.rs  shutdown.rs
src/app/cluster/: init.rs  mod.rs  run.rs  shutdown.rs
src/app/listener/: event_loop.rs  init.rs  mod.rs  run.rs  shutdown.rs
src/app/node/: init.rs  mod.rs  run.rs  shutdown.rs  terminating.rs
src/app/ring/: mod.rs
src/app/stage/: event_loop.rs  init.rs  mod.rs  run.rs  shutdown.rs
src/app/stage/receiver/: event_loop.rs  init.rs  mod.rs  run.rs  shutdown.rs  terminating.rs
src/app/stage/reporter/: event_loop.rs  init.rs  mod.rs  run.rs  shutdown.rs
src/app/stage/sender/: README.md  init.rs  mod.rs  run.rs  shutdown.rs
src/app/websocket/: add_nodes.rs  event_loop.rs  init.rs  mod.rs  run.rs  shutdown.rs
src/app/websocket/client/: add_nodes.rs  mod.rs
src/app/worker/: basic.rs  delete.rs  insert.rs  mod.rs  prepare.rs  select.rs  value.rs
src/application/: README.md  mod.rs  terminating.rs
src/cql/: Cargo.toml  mod.rs
src/cql/compression/: mod.rs
src/cql/connection/: cql.rs  tokens.rs
src/cql/frame/: auth_challenge.rs  auth_response.rs  authenticate.rs  batch.rs  batchflags.rs  consistency.rs  decoder.rs  encoder.rs  error.rs  mod.rs  opcode.rs  prepare.rs  query.rs  rows.rs  supported.rs
src/cql/murmur3/: mod.rs
src/cql/tests/: connection.rs
src/listener/: event_loop.rs  mod.rs  terminating.rs
src/node/: README.md
src/ring/: README.md
src/stage/: README.md
src/stage/receiver/: README.md
src/stage/reporter/: README.md
