[package]
name = "scylla-rs"
version = "0.1.2"
authors = ["IOTA Stiftung"]
edition = "2018"
license-file = "LICENSE"
homepage = "https://www.iota.org"
repository = "https://github.com/iotaledger/scylla.rs"
description = "An async ScyllaDB driver built on an actor-model framework"
keywords = ["iota", "scylla", "cassandra", "cql", "driver"]
exclude = ["scylla-app/**/*", "scylla-cql/**/*", ".github/**/*"]

[workspace]
members = [
    "scylla-app",
    "scylla-cql",
]

[dependencies]
scylla-app = { path = "./scylla-app", optional = true }
scylla-cql = { path = "./scylla-cql" }

[dev-dependencies]
env_logger = "0.8"
tokio = { version = "1.5", features = ["macros", "rt-multi-thread", "signal"] }
backstage = "0.1"
async-trait = "0.1"
serde = "1.0"
serde_json = "1.0"
log = "0.4"
futures = "0.3"
num_cpus = "1.13"

[[example]]
name = "scylla"
path = "examples/scylla.rs"

[features]
default = ["app"]
app = ["scylla-app"]