[package]
name = "scylla-app"
version = "0.1.2"
authors = ["IOTA Stiftung"]
edition = "2018"
license-file = "../LICENSE"
homepage = "https://www.iota.org"
repository = "https://github.com/iotaledger/scylla.rs"

[dependencies]
backstage = "0.1"
scylla-cql = { path = "../scylla-cql" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.5"
tokio-tungstenite = "0.14"
log = "0.4"
futures = "0.3"
futures-util = "0.3"
rand = "0.8"
url = "2.2"
num_cpus = "1.13"
md5 = "0.7"
dyn-clone = "1.0"
anyhow = "1.0"
thiserror = "1.0"
