[package]
name = "scylla-parse"
version = "0.1.0"
authors = ["IOTA Stiftung"]
edition = "2018"
license-file = "LICENSE"
homepage = "https://www.iota.org"
repository = "https://github.com/iotaledger/scylla.rs"
description = "Statement parsing library for Scylla CQL"
keywords = ["iota", "scylla", "cassandra", "database", "parser"]
exclude = [".github/**/*"]

[dependencies]
uuid = "0.8"
regex = "1.5"
hex = "0.4"
derive_builder = "0.10"
lazy_static = "1.4"
chrono = { version = "0.4", default-features = false }
anyhow = "1.0"
derive_more = "0.99"
anymap = "0.12"
scylla-parse-macros = { path = "../scylla-parse-macros" }

[dev-dependencies]
maplit = "1.0"