[package]
name = "scylla"
version = "0.1.0"
authors = ["IOTA Stiftung"]
edition = "2018"
license = "APACHE 2.0"
homepage = "https://docs.iota.org/docs/chronicle/1.1/overview"
repository = "https://github.com/iotaledger/scylla.rs"

[dependencies]
backstage = { git = "https://github.com/iotaledger/backstage.git", branch = "main" }
scylla-cql = { path = "../scylla-cql" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.4",default-features = false, features = ["io-std","fs", "macros", "sync", "net", "io-util", "time", "rt-multi-thread","signal", "full"] }
tokio-tungstenite = "0.14"
log = "0.4"
env_logger = "0.8"
futures = "0.3"
futures-util = "0.3"
rand = "0.8"
url = "2.2"
num_cpus = "1.13"
md5 = "0.7"
dyn-clone = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full", "time", "signal"] }
log = "0.4"
env_logger = "0.8"
futures = "0.3"
rand = "0.8"

[[example]]
name = "scylla"
path = "examples/scylla.rs"
