[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

# required deps to run the example
[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
scylla = {path = "../"}
backstage = { git = "https://github.com/iotaledger/backstage.git", branch = "framework" }
tokio = { version = "1.4", features = ["full", "time", "rt-multi-thread", "signal"] }
env_logger = "0.8"
log = "0.4"

[[example]]
name = "scylla"
path = "scylla.rs"

[workspace]
