[package]
name = "scylla-cql"
version = "0.1.2"
authors = ["IOTA Stiftung"]
edition = "2018"
license-file = "../LICENSE"
homepage = "https://www.iota.org"
repository = "https://github.com/iotaledger/scylla.rs"

[dependencies]
lz4 = "1.23"
snap = "1.0"
port_scanner = "0.1"
tokio = {version = "1.5", features = ["io-util", "net"]}
anyhow = "1.0"
log = "0.4"
thiserror = "1.0"
num-derive = "0.3"
num-traits = "0.2"
md5 = "0.7"

[dev-dependencies]
tokio = {version = "1.5", features = ["macros", "io-util", "net"]}